erDiagram
    users ||--o{ profiles : has
    users ||--o{ posts : creates
    users ||--o{ comments : writes
    users ||--o{ notifications : receives
    posts ||--o{ comments : has

    users {
        int id PK
        text username
        text email
        text password
        timestamp created_at
        timestamp updated_at
    }

    profiles {
        int id PK
        int user_id FK
        text bio
        varchar avatar_url
        timestamp created_at
        timestamp updated_at
    }

    posts {
        int id PK
        int user_id FK
        varchar title
        text content
        varchar image
        timestamp created_at
        timestamp updated_at
    }

    comments {
        int id PK
        int post_id FK
        int user_id FK
        text content
        timestamp created_at
    }

    notifications {
        int id PK
        int user_id FK
        varchar type
        text message
        int related_id
        boolean is_read
        timestamp created_at
    }